--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App-header{
   margin: 30px 0;
+  max-width: 1000px;
+  box-shadow: 20px;
+  background-color: rgba(255, 255, 255, 0.449);
+  text-align: center;
 }
 
 .logo{
@@ -7,11 +11,22 @@
  max-width:200px;
  display: block;
  margin: 0 auto;
+-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+      opacity: 0.5;
+}
+.logo:hover{
+
+  opacity: 0.8;
+
 }
 
-.btn{
-  padding: 24px 40px;
-  margin: 20px;
-  background-color: rgb(60, 211, 211) !important ;
 
+.app-footer{
+text-align: center;
+margin: 30px 0;
+}
+
+.container{
+text-align: center;
 }
