--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+.App {
+  max-width: 900px;
+  margin: 30px auto;
+    display: block;
+    border-radius: 36px;
+box-shadow:0 30px 50px rgba(114, 114, 114, 0.256); 
+
+padding: 32px;
+}
+
+
 .App-header{
   margin: 30px 0;
   max-width: 1000px;
@@ -23,10 +34,62 @@
 
 
 .app-footer{
-text-align: center;
-margin: 30px 0;
+
+ font-size: 12px;
+  margin: 10px 0;
+  font-weight: 400;
+  text-align: center;
+  padding: 6px 0px;
+backdrop-filter: blur(5px);
+background: transparent;
 }
 
 .container{
 text-align: center;
+background-color: rgb(144, 132, 128);
+opacity: 0.6;
+}
+h1{
+  color: rgb(44, 44, 44);
+opacity: 0.9;
+}
+
+.btn{
+  background-color: rgb(144, 132, 128);
+text-decoration: none;
+border: none;
+  width: 80%;
+  padding: 2.5px;
+  margin: 24px 0;
+  margin-left: 226px;
+  border-radius: 0px;
+  display: flexbox;
+    font-size: 24px;
+}
+.btn:hover{
+  background-color: rgb(96, 87, 87);
+}
+
+
+input {
+  width: 220%;
+  margin: 24px 0;
+  box-sizing: border-box;
+  display: block;
+  font-size: 24px;
+}
+
+@media (max-width: 800px) {
+  .App {
+  font-size: 12px;
+  }
+ .input {
+  display: block;
+  font-size: 11px;
+}
+.btn{
+  font-size: 18px;
+  width: 100px;
+padding: 6px;
+}
 }
