--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -3,3 +3,21 @@ text-align: center;
 max-width: 400px;
 display: block;
 }
+
+.icon{
+    width: 32px;
+margin: 24px;
+position: relative;
+  top: 60px;
+    right: -620px;
+
+padding: 4px;
+}
+
+input {
+  width: 100%;
+  box-sizing: border-box;
+  display: block;
+  font-size: 20px;
+  margin-left: 204px;
+}
