--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -14,7 +14,9 @@ position: relative;
 padding: 4px;
 }
 
-input {
+
+
+.Dictionary input {
   width: 100%;
   box-sizing: border-box;
   display: block;
