--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -19,9 +19,10 @@
 .Dictionary h1 {
   font-size: 30px;
   text-align: center;
+  color: rgb(95, 95, 95);
 }
 .Dictionary h2 {
   font-size: 30px;
   text-align: center;
-
+  color: rgb(95, 95, 95);
 }
